# cs2star

./: .cruft.json  .github_changelog_generator  README.md  cs2star.py  pyproject.toml  requirements.txt  setup.cfg
.github/: ISSUE_TEMPLATE.md
cs2star/: cs2star.py  job_parser.py
src/cs2star/: cs2star.py  job_parser.py
