[metadata]
name = cs2star
version = 0.3.1
url = https://github.com/brisvag/cs2star/
license = BSD 3-Clause
license_file = LICENSE
description = A simple utility to convert cryosparc particle positions to relion star format.
long_description = file: README.md
long_description_content_type = text/markdown
author = Lorenzo Gaifas
author_email = brisvag@gmail.com
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
python_requires = >= 3.8
include_package_data = True
install_requires =
    pandas
    click
    numpy


[options.entry_points]
console_scripts =
    cs2star = cs2star:main

[options.package_data]
* = *.txt, *.md

[flake8]
exclude = __init__.py
max-line-length = 110
