[metadata]
name = cs2star
url = https://github.com/brisvag/cs2star/
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE
description = A simple utility to convert cryosparc particle positions to relion star format.
long_description = file: README.md
long_description_content_type = text/markdown
author = Lorenzo Gaifas
author_email = brisvag@gmail.com
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
python_requires = >= 3.7
include_package_data = True
setup_requires = 
    setuptools_scm
install_requires =
    pandas
    click
    numpy
    rich


[options.entry_points]
console_scripts =
    cs2star = cs2star.cs2star:main

[options.package_data]
* = *.txt, *.md
